genre controller + changed column name

--- a/public/exemple.html
+++ b/public/exemple.html
@@ -21,7 +21,7 @@
         function display() {
             document.querySelector('#target').innerHTML = '';
             for (const item of list) {
-                document.querySelector('#target').innerHTML += `<p>${item.title} -  ${item.length} minutes</p>`
+                document.querySelector('#target').innerHTML += `<p>${item.title} -  ${item.duration} minutes</p>`
             }
         }
         
@@ -33,7 +33,7 @@
 
         document.querySelector('#add').addEventListener('click', () => {
             axios.post('http://localhost:8000/api/movie', 
-            {title: 'test', length: 65, resume: 'test', released: new Date()})
+            {title: 'test', duration: 65, resume: 'test', released: new Date()})
             .then(response => { list.push(response.data); display() });
         })
     </script>
